--- a/Desktop/Checkpoint1/Hello.html
+++ b/Desktop/Checkpoint1/Hello.html
@@ -1,12 +1,83 @@
 <!DOCTYPE html> 
-<html> 
+<html lang="fr-FR"> 
     <head> 
+        <!-- META TAGS -->
         <meta charset="UTF-8"> 
-        <title>Cabinet médical Dr Alain Jaures</title> 
+        <title>Cabinet médical Dr Hayfa Ben Youssef</title> 
+    <style> 
+    .topnav {
+  overflow: hidden;
+  background-color:  #f78da7;
+}
+  .topnav a {
+  float: left;
+  color: #fffbfb;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+.topnav a.active {
+  background-color: #aa0486;
+  color: white;
+}
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+        </style> 
     </head> 
 <body> 
-    <h1 style="color: red;"> Dr Alain Jaures</h1>  
+    <div class="topnav">
+        <a class="active" href="https://www.medecin-esthetiqueparis.com/" target="_blank">Home</a>
+        <a href="https://www.medecin-esthetiqueparis.com/actualites" target="_blank">About</a>
+        <a href="https://www.medecin-esthetiqueparis.com/medecine-esthetique" target=""_blank>Work</a>
+        <a href="https://www.medecin-esthetiqueparis.com/dr-ben-youssef" target="_blank">Resume</a>
+        <a href="https://www.medecin-esthetiqueparis.com/contact" target="_blank">Contact</a>
+      </div>
 
-</body>
+    <h1 style="color: red;">Cabinet médical Dr Hayfa Ben Youssef</h1> 
+    
+    <p>Avant tous dépalecement consultez nos <a href="#Tarifs">Tarifs</a></p> 
+
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/xiDLaOQz-2Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p>En médecine esthétique et en phlébologie, la relation entre le médecin et son patient est primordiale ;
+              elle doit reposer sur la confiance, la transparence et la communication.<br />
+              Le <b> Dr Ben Youssef</b> est là pour recueillir et comprendre votre demande, vous conseiller et vous informer sur sa pratique, et enfin vous donner une réponse toujours professionnelle et rigoureuse.</p>
+            
+
+<table>
+  <tr>
+    <th>Soins du Visage</th>
+    <th>Peeling</th>
+    <th>Phlébologie</th>
+  </tr>
+  <tr>
+    <td>1 séance 20  € </td>
+    <td>1 séance 50  €</td>
+    <td> 1ère consultation 20 €</td>
+  </tr>
+  <tr>
+    <td>2 séances 35 € </td>
+    <td>2 séances 90  €</td>
+    <td>2éme consultation 15 € </td>
+  </tr>
+
+  <h2> Diplomes et formations</h2> 
+
+<ul> 
+  <li>Diplôme universitaire de prothèse faciale appliquée</li> 
+  <li>Diplôme universitaire de reconstitution faciale appliquée</li>
+  <li>Conférencier d’internat au sein des conférences IHP et Aspic Paris, Rouen, Poitiers </li> 
+
+</ul>
+
+<h2 id="Tarifs"> Les Tarifs </h2> 
+  
 
 </html>
